..F....... [ZBX-21618] fixed text overflow in maintenance list in opera browser

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -730,6 +730,8 @@ form {
 
 	.wordbreak {
 		white-space: normal;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	&.sticky-header {
