--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -3097,7 +3097,9 @@ form.is-loading {
     text-align: right;
     white-space: nowrap; }
   .list-table .wordbreak {
-    white-space: normal; }
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis; }
   .list-table.sticky-header thead {
     position: sticky;
     top: 0;
